# amiga-info-thumbnailer

./: README.md  install.sh  uninstall.sh
converter/: amiga-info-to-png  icon.js
converter/node/: convert-single.js  package.json
mime/: amiga-info.xml
plugin/: CMakeLists.txt  amigainfothumbnail.cpp  amigainfothumbnail.json
